--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Average+Sans&family=Stoke:wght@300;400&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
     <div>
-        <h1>Hola mundo</h1>
+        <h1>¡Lista de contactos con Javascript!</h1>
+        <h4>Para navegar dentro del menú, por favor coloque la opción a la cual quiere ir</h4>
     </div>
 
     <script src="app.js"></script>
